<package>
  <name>xbot</name>
  <version>1.1.0</version>
  <description>
    Software for xbot, Droid Robot's mobile research base.
  </description>
  <author>Rocwang</author>
  <maintainer email="wangpeng@droid.ac.cn"> Rocwang </maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://www.droid.ac.cn</url>
  <url type="repository">https://github.com/DroidAITech/xbot</url>
  <url type="website">http://ros.org/wiki/xbot</url>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <metapackage/>
  </export>
</package>
